remove repository content in service, disable repository auto generation